--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
   </nav>
   <section>
     <h2>Contact Us</h2>
-    <p><strong>Phone:</strong> +91 98765 43210</p>
+    <p><strong>Phone:</strong> +91 70589 53161</p>
     <p><strong>Email:</strong> onionexport@example.com</p>
-    <p><a href="https://wa.me/919876543210" target="_blank">Chat on WhatsApp</a></p>
+    <p><a href="https://wa.me/+91 7058953161" target="_blank">Chat on WhatsApp</a></p>
   </section>
 </body>
 </html>
